k8s/workstation/ws-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: workstationmoh
  labels:
    app: workstationmoh
    service: workstationmoh
spec:
  type: NodePort
  selector:
    app: workstationmoh
  ports:
    - port: 8080
      targetPort: 6901
      protocol: TCP
