k8s/workstation/ws-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: workstationmoh
spec:
  hosts:
    - workstationmoh
  gateways:
    - workstation-gateway
  http:
    - route:
        - destination:
            host: workstationmoh
